objects/SBQQ__ProductOption__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductOptionHelp</customHelpPage>
    <description>Option for a configurable product.</description>
    <fields>
        <fullName>Additional_Backups__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Backups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backside_Print__c</fullName>
        <label>Backside Print</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Backside_Print</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caliper2__c</fullName>
        <defaultValue>0.3</defaultValue>
        <label>Caliper</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caliper__c</fullName>
        <defaultValue>0.016</defaultValue>
        <label>Caliper</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CanOrderSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Order Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <description>IF( Details__c = &quot;&quot;,
Text(SBQQ__OptionalSKU__r.SBQQ__ChargeType__c),
Text(SBQQ__OptionalSKU__r.SBQQ__ChargeType__c)+ &quot;; &quot; + Details__c)</description>
        <formula>IF( Details__c = &quot;&quot;,
Text(SBQQ__OptionalSKU__r.SBQQ__ChargeType__c) + &quot;; &quot; + Text(SBQQ__OptionalSKU__r.SBQQ__BillingFrequency__c) + &quot;; &quot; + Text(SBQQ__OptionalSKU__r.SBQQ__BillingType__c),
Text(SBQQ__OptionalSKU__r.SBQQ__ChargeType__c) + &quot;; &quot; + Text(SBQQ__OptionalSKU__r.SBQQ__BillingFrequency__c) + &quot;; &quot; + Text(SBQQ__OptionalSKU__r.SBQQ__BillingType__c) + &quot;; &quot; + Details__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Type__c</fullName>
        <label>Cluster Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Size</fullName>
                </value>
                <value>
                    <fullName>Auto-Scaling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coatings__c</fullName>
        <label>Coatings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Coatings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colors__c</fullName>
        <label>Colors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Colors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Continuous_Integration__c</fullName>
        <label>Continuous Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Notes__c</fullName>
        <defaultValue>&quot;Enter notes here.&quot;</defaultValue>
        <label>Custom Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <defaultValue>16</defaultValue>
        <label>Depth</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embossing__c</fullName>
        <label>Embossing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Embossing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_Options__c</fullName>
        <label>Engineering Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engineering_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <label>Example</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Film_Type__c</fullName>
        <label>Film Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Film_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foil_Stamped__c</fullName>
        <label>Foil Stamped</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Foil_Stamped</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gauge__c</fullName>
        <label>Gauge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gauge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glued__c</fullName>
        <label>Glued</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Glued</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Grade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>HYPERLINK( SBQQ__ConfiguredSKU__r.Help_Link__c, IMAGE(&quot;/servlet/servlet.ImageServer?id=0153t000004QwGB&amp;oid=00D3t000005Ag13&amp;lastMod=1589228835000&quot;,&quot;Help&quot;,40,40) , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Height__c</fullName>
        <label>Image Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Width__c</fullName>
        <label>Image Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(CONTAINS(SBQQ__OptionalSKU__r.Product_Picture_ID_URL__c,&quot;.&quot;), 

IF(ISBLANK(SBQQ__OptionalSKU__r.Product_Picture_ID_URL__c), IMAGE(&quot;https://c.na35.content.force.com/servlet/servlet.ImageServer?id=0153t000004QwGC&amp;oid=00D3t000005Ag13&quot;, &quot;&quot;, 50, 100),IMAGE((SBQQ__OptionalSKU__r.Product_Picture_ID_URL__c), &quot;&quot;, SBQQ__OptionalSKU__r.Product_Image_Height__c, SBQQ__OptionalSKU__r.Product_Image_Width__c)), 

(IF(ISBLANK(SBQQ__OptionalSKU__r.Product_Picture_ID_URL__c), IMAGE(&quot;https://c.na35.content.force.com/servlet/servlet.ImageServer?id=0153t000004QwGC&amp;oid=00D3t000005Ag13&quot;, &quot;&quot;, 50, 100),IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot; + SBQQ__OptionalSKU__r.Product_Picture_ID_URL__c + &quot;&amp;oid=&quot; + $Organization.Id , &quot;&quot;, SBQQ__OptionalSKU__r.Product_Image_Height__c, SBQQ__OptionalSKU__r.Product_Image_Width__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Diameter__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Internal Diameter</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InventoryFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InventoryFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Low Stock</fullName>
                </value>
                <value>
                    <fullName>Sufficient Stock</fullName>
                </value>
                <value>
                    <fullName>Extra Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knifing__c</fullName>
        <label>Knifing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Knifing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <defaultValue>11</defaultValue>
        <label>Length</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Linux__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mac__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <label>Manufacturing Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Cluster_Size__c</fullName>
        <label>Max Cluster Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Data_Storage__c</fullName>
        <label>Max Data Storage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memory_Config__c</fullName>
        <label>Memory Config</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performance Optimized</fullName>
                </value>
                <value>
                    <fullName>Performance Optimized with Sparing</fullName>
                </value>
                <value>
                    <fullName>Memory Mirroring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Spec__c</fullName>
        <label>Packing Spec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Packing_Spec</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_of_TotalFORMULA__c</fullName>
        <formula>SBQQ__OptionalSKU__r.SBQQ__SubscriptionPercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Total_CategoryFORMULA__c</fullName>
        <formula>TEXT( SBQQ__OptionalSKU__r.SBQQ__SubscriptionCategory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Total Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Considerations__c</fullName>
        <label>Print Considerations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Print_Considerations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <label>Print</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Print</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Solution__c</fullName>
        <label>Product Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security Operations</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat Analysis</fullName>
                </value>
                <value>
                    <fullName>Application Control</fullName>
                </value>
                <value>
                    <fullName>Application Security</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Database Security</fullName>
                </value>
                <value>
                    <fullName>Endpoint Protection</fullName>
                </value>
                <value>
                    <fullName>Network Security</fullName>
                </value>
                <value>
                    <fullName>Security Management</fullName>
                </value>
                <value>
                    <fullName>SIEM</fullName>
                </value>
                <value>
                    <fullName>Web Security</fullName>
                </value>
                <value>
                    <fullName>Atomic Security Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protected_Devices__c</fullName>
        <defaultValue>240</defaultValue>
        <label>Protected Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Assigned__c</fullName>
        <label>Quantity Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_On_Hand__c</fullName>
        <label>Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quick_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recovery_Method__c</fullName>
        <label>Recovery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Assisted</fullName>
                </value>
                <value>
                    <fullName>Expert-Led</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Location__c</fullName>
        <label>Resource Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Resource_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AppliedImmediatelyContext__c</fullName>
        <description>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</description>
        <inlineHelpText>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</inlineHelpText>
        <label>Apply Immediately Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>On Selection</fullName>
                </value>
                <value>
                    <fullName>On Quantity Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this option should apply immediately.</description>
        <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that related product is bundled with the main product. Bundled options have fixed quantity and zero price.</description>
        <inlineHelpText>Select the checkbox to indicate that the related product is bundled with the main product. Bundled options have fixed quantity and zero price as price is included in the main product. Leave this unchecked if the price should be added to the option.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCodePosition__c</fullName>
        <description>Position of this component in the generated product code for the configuration.</description>
        <inlineHelpText>Position of this component in the generated product code for the configuration.</inlineHelpText>
        <label>Component Code Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCode__c</fullName>
        <description>Code for the component represented by this option. This is used in conjunction with the Configured Code Pattern field on the Product object.</description>
        <inlineHelpText>Code for the component represented by this option.</inlineHelpText>
        <label>Component Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDescriptionPosition__c</fullName>
        <description>Position of this component in the generated product description for the configuration.</description>
        <inlineHelpText>Position of this component in the generated product description for the configuration.</inlineHelpText>
        <label>Component Description Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDescription__c</fullName>
        <description>Description for the component represented by this option. This is used in conjunction with the Configured Description Pattern field on the Product object.</description>
        <inlineHelpText>Description for the component represented by this option. This is used in conjunction with the Configured Description Pattern field on the Product object.</inlineHelpText>
        <label>Component Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</description>
        <inlineHelpText>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <inlineHelpText>Select the pricing table this product should appear in by default when price dimensions are defined.</inlineHelpText>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <description>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</description>
        <inlineHelpText>Lookup the discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Enter a Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that quote lines generated from this component should pick up additional discount from the parent package line. Only percentage based discount can be inherited.</description>
        <inlineHelpText>Check to automatically apply additional discount from parent package to this component. Only percentage-based discount can be applied.</inlineHelpText>
        <label>Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExistingQuantity__c</fullName>
        <description>Existing quantity of this product. Computed by looking at the assets attached to the account.</description>
        <inlineHelpText>Existing quantity of this product. Computed by looking at the assets attached to the account.</inlineHelpText>
        <label>Existing Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature that selects this option.</description>
        <inlineHelpText>Enter or lookup the feature that includes this option. This will be dependent on the Configured SKU.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MaxQuantity__c</fullName>
        <description>Maximum quantity allowed for this option.</description>
        <inlineHelpText>Maximum quantity allowed for this option.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__MinQuantity__c</fullName>
        <description>Minimum quantity allowed for this option.</description>
        <inlineHelpText>Minimum quantity allowed for this option.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sequential number that determines this option&apos;s sort order.</description>
        <inlineHelpText>Set the display order of this option within the feature it&apos;s assigned to.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionalSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU added if this option is selected.</description>
        <inlineHelpText>Enter or lookup the product SKU that should be added when this product is selected.</inlineHelpText>
        <label>Optional SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Optional For</relationshipLabel>
        <relationshipName>OptionalFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <description>Brings over the value of Price Editable field on the optional SKU in order to avoid loading optional product just to know if the price is editable.</description>
        <formula>IF(SBQQ__OptionalSKU__r.SBQQ__PriceEditable__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <inlineHelpText>Select to mark the price as editable, allowing users to make changes to option prices.</inlineHelpText>
        <label>Price Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductCode__c</fullName>
        <description>Product Code for the optional product SKU.</description>
        <formula>SBQQ__OptionalSKU__r.ProductCode</formula>
        <inlineHelpText>Product Code for the optional product SKU.</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductConfigurationType__c</fullName>
        <description>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__ConfigurationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</inlineHelpText>
        <label>Product Configuration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductDescription__c</fullName>
        <description>Description for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description for the optional SKU.</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>Product Family for the optional product SKU.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.Family)</formula>
        <inlineHelpText>Product Family for the optional product SKU.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Name for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name for the optional SKU.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductQuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <formula>SBQQ__OptionalSKU__r.SBQQ__QuantityScale__c</formula>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Product Quantity Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Product Subscription Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
        <inlineHelpText>Check to allow quantity to be edited even though it&apos;s specified on the option.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of the related product that should be added to the quote.</description>
        <inlineHelpText>Quantity of the related product that should be added to the quote.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>